# serializer version: 1
# name: test_list_tools
  'HassTurnOn'
# ---
# name: test_list_tools.1
  'Turns on/opens a device or entity'
# ---
# name: test_list_tools.2
  dict({
    'type': 'string',
  })
# ---
